3 User stories have been done!

--- a/InterviewAssessment/Views/AddEntityDialog.xaml
+++ b/InterviewAssessment/Views/AddEntityDialog.xaml
@@ -3,17 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DomainModelEditor"
         mc:Ignorable="d"
+        DataContext="{Binding Source={StaticResource Locator}, Path=AddEntityViewModel}"
         Title="Add New Entity" Height="130" Width="450">
     <StackPanel>
         <StackPanel>
             <Label>Name of the new entity</Label>
-            <TextBox x:Name="Name" Margin="10"/>
+            <TextBox x:Name="Name" Margin="10" Text="{Binding EntityName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Add" Click="Add_Click" Width="50" />
-            <Button Content="Cancel" Click="Cancel_Click" Margin="10,0" Width="50" />
+            <Button Content="Add" Command="{Binding AddNewEntityCommand}" Width="50" />
+            <Button Content="Cancel" Command="{Binding CancelCommand}" Width="50" />
         </StackPanel>
     </StackPanel>
 </Window>
