--- a/InterviewAssessment/App.xaml
+++ b/InterviewAssessment/App.xaml
@@ -2,8 +2,39 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:interview_assessment"
-             StartupUri="MainWindow.xaml">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+              DispatcherUnhandledException="Application_DispatcherUnhandledException"
+             mc:Ignorable="d">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <vm:ViewModelLocator
+                xmlns:vm="clr-namespace:DomainModelEditor.ViewModels"
+                x:Key="Locator"
+                d:IsDataSource="True" />
+
+            <!-- Application styles definition -->
+            <Style x:Key="AttributeLabel" TargetType="Label">
+                <Setter Property="FontSize" Value="12"></Setter>
+            </Style>
+            <Style x:Key="SaveButton" TargetType="Button">
+                <Setter Property="FontSize" Value="15"></Setter>
+                <Setter Property="Width" Value="200"></Setter>
+                <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+                <Setter Property="FontWeight" Value="Bold"></Setter>
+                <Setter Property="Background" Value="LightBlue"></Setter>
+
+            </Style>
+            <Style x:Key="myHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
+                <Setter Property="Background" Value="LightBlue"></Setter>
+                <Setter Property="FontWeight" Value="Bold"/>
+            </Style>
+            <Style x:Key="textBoxAttribute" TargetType="TextBox">
+                <Setter Property="FontSize" Value="15"></Setter>
+                <Setter Property="Width" Value="200"></Setter>
+                <Setter Property="Margin" Value="2"></Setter>
+                <Setter Property="HorizontalAlignment" Value="Left"></Setter>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
