--- a/InterviewAssessment/App.xaml
+++ b/InterviewAssessment/App.xaml
@@ -32,8 +32,28 @@
             <Style x:Key="textBoxAttribute" TargetType="TextBox">
                 <Setter Property="FontSize" Value="15"></Setter>
                 <Setter Property="Width" Value="200"></Setter>
-                <Setter Property="Margin" Value="2"></Setter>
+                <Setter Property="Margin" Value="2,2,2,30"></Setter>
                 <Setter Property="HorizontalAlignment" Value="Left"></Setter>
+            </Style>
+            <Style x:Key="TxtValidator" BasedOn="{StaticResource textBoxAttribute}" TargetType="TextBox">
+                <Setter Property="Validation.ErrorTemplate">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <StackPanel>
+                                <AdornedElementPlaceholder x:Name="placeholder"/>
+                                <TextBlock FontSize="12" Foreground="Red" TextWrapping="Wrap" MaxWidth="200" Text="{Binding ElementName=placeholder,
+                                    Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
+                            </StackPanel>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Style.Triggers>
+                    <Trigger Property="Validation.HasError" Value="True">
+                        <Setter Property="Background" Value="Red"/>
+                        <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self},
+            Path=(Validation.Errors)[0].ErrorContent}"/>
+                    </Trigger>
+                </Style.Triggers>
             </Style>
         </ResourceDictionary>
     </Application.Resources>
