--- a/DomainModelEditor.AspCore.MVC/Views/Entity/Index.cshtml
+++ b/DomainModelEditor.AspCore.MVC/Views/Entity/Index.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<div class="row">
+<div class="col-md-10 offset-md-2">
+
+    <table class="table">
+        <tr>
+            <td>Name</td>
+            <td>Is Persistent</td>
+        </tr>
+        @Html.DisplayForModel()
+    </table>
+</div>
+</div>
